Contrast fixes

--- a/style.css
+++ b/style.css
@@ -29,7 +29,3 @@ body{
 audio{
     width: 250px; height: 55px
 }
-
-#links{
-    color:red;
-}
